# Practice-CMake

./: README.md
Demo1/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  main.cc
Demo2/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  MyFunctions.cc  cmake_install.cmake  main.cc
Demo3/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  main.cc
Demo3/Functions/: CMakeLists.txt  Makefile  MyFunctions.h  cmake_install.cmake
Demo4/: CMakeCache.txt  CMakeLists.txt  DEMO  Makefile  cmake_install.cmake  main.cc
Demo4/math/: CMakeLists.txt  Makefile  cmake_install.cmake
